--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
     }
 }
 
@@ -12,9 +13,37 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.google.protobuf'
+
+def protobufVersion = '3.6.1'
+def grpcVersion = '1.16.1'
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:${protobufVersion}"
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
+    generatedFilesBaseDir = "$projectDir/src/generated"
+}
+
+idea {
+    module {
+        sourceDirs += file("${projectDir}/src/generated/main/java");
+        sourceDirs += file("${projectDir}/src/generated/main/grpc");
+    }
+}
 
 bootJar {
-    baseName = 'gs-actuator-service'
+    baseName = 'abqwtb-server'
     version =  '0.1.0'
 }
 
@@ -37,6 +66,8 @@ dependencies {
     // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
     //compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    implementation 'com.google.protobuf:protobuf-java:3.6.1'
+    
     // Use MySQL Connector-J
     //compile 'mysql:mysql-connector-java'
     testCompile("org.springframework.boot:spring-boot-starter-test")
